# NSP2

./: pyproject.toml
src/nsp2/: V_T_dataset.csv  fitter.ipynb  fitter.py  meting_1.csv  meting_10.csv  meting_11.csv  meting_12.csv  meting_15.csv  meting_18.csv  meting_19.csv  meting_2.csv  meting_21.csv  meting_25.csv  meting_26.csv  meting_27.csv  meting_28.csv  meting_29.csv  meting_3.csv  meting_30.csv  meting_31.csv  meting_34.csv  meting_35.csv  meting_36.csv  meting_38.csv  meting_39.csv  meting_4.csv  meting_40.csv  meting_41.csv  meting_42.csv  meting_43.csv  meting_44.csv  meting_45.csv  meting_46.csv  meting_47.csv  meting_48.csv  meting_49.csv  meting_5.csv  meting_50.csv  meting_51.csv  meting_52.csv  (+14 more)
src/nsp2/echte metingen/: meting_0.csv  meting_1.csv  meting_13.csv  meting_14.csv  meting_16.csv  meting_17.csv  meting_20.csv  meting_22.csv  meting_23.csv  meting_24.csv  meting_3.csv  meting_32.csv  meting_33.csv  meting_36.csv  meting_37.csv  meting_4.csv  meting_5.csv  meting_6.csv  meting_7.csv  meting_8.csv  meting_9.csv
