[tool.poetry]
name = "nsp2"
version = "0.1.0"
description = ""
authors = ["Part pieter <manusvanderham@outlook.com>"]
readme = "README.md"
packages = [{include = "nsp2", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
lmfit = "^1.3.2"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
